force-app/main/default/objects/Projetos_K_BUM__c/Projetos_K_BUM__c.object-meta.xml
<CustomObject>
    <description>A empresa K-BUM, gostaria de armazenar os projetos que possuem.</description>
    <label>Projeto_K-BUM</label>
    <nameField>
        <label>Nome de Projetos_K-BUM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projetos_K-BUM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>