force-app/main/default/objects/Projetos_K_BUM__c/fields/Data_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Data_de_entrega__c</fullName>
    <description>Data de entrega  de projetos da empresa.</description>
    <inlineHelpText>Data de entrega  de projetos da empresa.</inlineHelpText>
    <label>Data de entrega</label>
    <type>Date</type>
</CustomField>