force-app/main/default/objects/Projetos_K_BUM__c/fields/Data_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_inicio__c</fullName>
    <description>Data de início do projeto da empresa.</description>
    <inlineHelpText>Data de início de projetos da empresa.</inlineHelpText>
    <label>Data de inicio</label>
    <type>Date</type>
</CustomField>