force-app/main/default/objects/Projetos_K_BUM__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <description>Desconto no valor do projeto.</description>
    <inlineHelpText>Desconto no valor do projeto.</inlineHelpText>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>