force-app/main/default/objects/Projetos_K_BUM__c/fields/Descricao_do_projeto__c.field-meta.xml
<CustomField>
    <fullName>Descricao_do_projeto__c</fullName>
    <description>Descrição do projeto.</description>
    <inlineHelpText>Descrição do projeto.</inlineHelpText>
    <label>Descricao do projeto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>