force-app/main/default/objects/Projetos_K_BUM__c/fields/Entregavel__c.field-meta.xml
<CustomField>
    <fullName>Entregavel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecione caso seja Entregável.</inlineHelpText>
    <label>Entregavel</label>
    <type>Checkbox</type>
</CustomField>