force-app/main/default/objects/Projetos_K_BUM__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <description>Etapas do projeto.</description>
    <inlineHelpText>Seleciona a etapa que se encontra o projeto.</inlineHelpText>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requisitos</fullName>
            </value>
            <value>
                <fullName>Prototipagem</fullName>
            </value>
            <value>
                <fullName>Validação</fullName>
            </value>
            <value>
                <fullName>Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Testes</fullName>
            </value>
            <value>
                <fullName>Implantação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>