force-app/main/default/objects/Projetos_K_BUM__c/fields/Gerente_de_projeto__c.field-meta.xml
<CustomField>
    <fullName>Gerente_de_projeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento de pesquisa</description>
    <inlineHelpText>Relacionamento de pesquisa com usuario.</inlineHelpText>
    <label>Gerente de projeto</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projetos_K_BUM</relationshipName>
    <type>Lookup</type>
</CustomField>