force-app/main/default/objects/Projetos_K_BUM__c/fields/Porcentagem_completa__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_completa__c</fullName>
    <label>Porcentagem completa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>