force-app/main/default/objects/Projetos_K_BUM__c/fields/Possiveis_Entregas__c.field-meta.xml
<CustomField>
    <fullName>Possiveis_Entregas__c</fullName>
    <inlineHelpText>Selecione a opção.</inlineHelpText>
    <label>Possiveis Entregas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Código fonte</fullName>
            </value>
            <value>
                <fullName>Documentação</fullName>
            </value>
            <value>
                <fullName>Documentação de Ajuda</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>