force-app/main/default/objects/Projetos_K_BUM__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <description>Relacionamento Mestre - detalhe (Conta).</description>
    <inlineHelpText>Relacionamento Mestre - detalhe (Conta).</inlineHelpText>
    <label>Solicitante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projetos_K-BUM</relationshipLabel>
    <relationshipName>Projetos_K_BUM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>