force-app/main/default/objects/Projetos_K_BUM__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status do projeto.</description>
    <inlineHelpText>Selecione a etapa que o projeto se encontra.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposto</fullName>
            </value>
            <value>
                <fullName>aprovado</fullName>
            </value>
            <value>
                <fullName>reprovado</fullName>
            </value>
            <value>
                <fullName>em andamento</fullName>
            </value>
            <value>
                <fullName>concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>