force-app/main/default/objects/Projetos_K_BUM__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Valor do projeto.</description>
    <inlineHelpText>Adicione o valor do projeto.</inlineHelpText>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>