force-app/main/default/objects/Projetos_K_BUM__c/fields/Valor_pago__c.field-meta.xml
<CustomField>
    <fullName>Valor_pago__c</fullName>
    <description>Calculo de valor total levando o desconto em consideração.</description>
    <formula>Valor__c  - (Valor__c  *  Desconto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculo de valor total levando o desconto em consideração.</inlineHelpText>
    <label>Valor pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>